# translator-project

./: .gitignore  README.md
app/api/routers/: translate.py
app/api/schemas/: source_languages.py  target_languages.py
app/translation/: translator.py
backend/: Makefile  pyproject.toml
backend/app/api/routers/: translate.py
frontend/translator-page/: package-lock.json  package.json
translator/: .env.template  Dockerfile  Makefile
translator-ui/: package-lock.json  package.json
translator-ui/app/: app.css  root.tsx  routes.ts
translator-ui/app/routes/: main.tsx
translator-ui/app/translate/: translate.tsx
translator/app/api/routers/: translate.py
translator/app/api/schemas/: formality_preference.py  glossary_languages.py  source_languages.py  target_languages.py
translator/app/translation/: translator.py
