[build-system]
requires = ["setuptools", "wheel"]

[project]
name = 'translation_project'
version = "0.1.0"
requires-python = '>=3.11'
description = "An application for translation"
authors = [
    { name="Charlie Beall", email="cewbeall@gmail.com" }
]
dependencies = [
    'deepl==1.19.1',
    'fastapi==0.115.2',
    'python-dotenv==1.0.1',
    'uvicorn==0.31.1'
]